@@ -60,7 +60,7 @@ if ($res) for ($i = 0; ($row = sql_row($res, $i)); $i++)
 	if ($row[0] == $area)
 	{
 		$this_area_name = htmlspecialchars($row[1]);
-		echo "<font color=red>$this_area_name</font></a><br>\n";
+		echo "<font color=\"red\">$this_area_name</font></a><br>\n";
 	}
 	else echo htmlspecialchars($row[1]) . "</a><br>\n";
 }
@@ -76,7 +76,7 @@ if ($res) for ($i = 0; ($row = sql_row($res, $i)); $i++)
 	if ($row[0] == $room)
 	{
 		$this_room_name = htmlspecialchars($row[1]);
-		echo "<font color=red>$this_room_name</font></a><br>\n";
+		echo "<font color=\"red\">$this_room_name</font></a><br>\n";
 	}
 	else echo htmlspecialchars($row[1]) . "</a><br>\n";
 }
@@ -234,7 +234,7 @@ for ($weekcol = 0; $weekcol < $weekday_start; $weekcol++)
 for ($cday = 1; $cday <= $days_in_month; $cday++)
 {
 	if ($weekcol == 0) echo "</tr><tr>\n";
-	echo "<td valign=top height=100 class=month><div class=monthday><a href=\"day.php?year=$year&month=$month&day=$cday&area=$area\">$cday</a></div>\n";
+	echo "<td valign=top height=100 class=\"month\"><div class=\"monthday\"><a href=\"day.php?year=$year&month=$month&day=$cday&area=$area\">$cday</a></div>\n";
 
 	# Anything to display for this day?
 	if (isset($d[$cday]["id"][0]))
